product details and cart page template import done

--- a/view/user/partials/footer.ejs
+++ b/view/user/partials/footer.ejs
@@ -109,6 +109,7 @@
 <script src="/user/js/bootstrap.min.js"></script>
 <!-- easing js -->
 <script src="/user/js/jquery.magnific-popup.js"></script>
+<script src="/user/js/lightslider.min.js"></script>
 <!-- swiper js -->
 <script src="/user/js/swiper.min.js"></script>
 <!-- swiper js -->
