--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/user/css/owl.carousel.min.css">
     <!-- font awesome CSS -->
     <link rel="stylesheet" href="/user/css/all.css">
+    <link rel="stylesheet" href="/user/css/lightslider.min.css">
     <!-- flaticon CSS -->
     <link rel="stylesheet" href="/user/css/flaticon.css">
     <link rel="stylesheet" href="/user/css/themify-icons.css">
