fixed the bug and started implementing routes MVC

--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -2425,6 +2425,7 @@ ul {
   position: relative;
   background-color: #ecfdff;
   overflow: hidden;
+  height: 820px;
 }
 
 /* line 7, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_banner.scss */
