--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="/user/css/animate.css">
     <!-- owl carousel CSS -->
     <link rel="stylesheet" href="/user/css/owl.carousel.min.css">
+        <!-- nice select CSS -->
+        <link rel="stylesheet" href="/user/css/nice-select.css">
     <!-- font awesome CSS -->
     <link rel="stylesheet" href="/user/css/all.css">
     <link rel="stylesheet" href="/user/css/lightslider.min.css">
@@ -23,6 +25,7 @@
     <link rel="stylesheet" href="/user/css/magnific-popup.css">
     <!-- swiper CSS -->
     <link rel="stylesheet" href="/user/css/slick.css">
+    <link rel="stylesheet" href="/user/css/price_rangs.css">
     <!-- style CSS -->
     <link rel="stylesheet" href="/user/css/style.css">
 </head>
@@ -107,7 +110,7 @@
                 </div>
             </div>
         </div>
-        <div class="search_input" id="search_input_box">
+        <!-- <div class="search_input" id="search_input_box">
             <div class="container ">
                 <form class="d-flex justify-content-between search-inner">
                     <input type="text" class="form-control" id="search_input" placeholder="Search Here">
@@ -115,7 +118,7 @@
                     <span class="ti-close" id="close_search" title="Close Search"></span>
                 </form>
             </div>
-        </div>
+        </div> -->
     </header>
     <!-- Header part end-->
 
