--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -91,7 +91,7 @@
                             </ul>
                         </div>
                         <div class="hearer_icon d-flex">
-                            <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
+                            <!-- <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a> -->
                             <a href=""><i class="ti-heart"></i></a>
                             <div class="dropdown cart">
                                 <a class="dropdown-toggle" href="#" id="navbarDropdown3" role="button"
@@ -103,8 +103,8 @@
     
                                     </div>
                                 </div> -->
-
                             </div>
+                            <a href="/login"><i class="ti-user"></i>&nbsp; Sign In</a>
                         </div>
                     </nav>
                 </div>
