path set to create accont

--- a/view/user/login.ejs
+++ b/view/user/login.ejs
@@ -27,7 +27,7 @@
                             <h2>New to our Shop?</h2>
                             <p>There are advances being made in science and technology
                                 everyday, and a good example of this is the</p>
-                            <a href="#" class="btn_3">Create an Account</a>
+                            <a href="/signup" class="btn_3">Create an Account</a>
                         </div>
                     </div>
                 </div>
