--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -1,116 +1,150 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zxx">
-
-<head>
+  <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>aranoz</title>
-    <link rel="icon" href="/user/img/favicon.png">
+    <link rel="icon" href="/user/img/favicon.png" />
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/user/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/user/css/bootstrap.min.css" />
     <!-- animate CSS -->
-    <link rel="stylesheet" href="/user/css/animate.css">
+    <link rel="stylesheet" href="/user/css/animate.css" />
     <!-- owl carousel CSS -->
-    <link rel="stylesheet" href="/user/css/owl.carousel.min.css">
-        <!-- nice select CSS -->
-        <link rel="stylesheet" href="/user/css/nice-select.css">
+    <link rel="stylesheet" href="/user/css/owl.carousel.min.css" />
+    <!-- nice select CSS -->
+    <link rel="stylesheet" href="/user/css/nice-select.css" />
     <!-- font awesome CSS -->
-    <link rel="stylesheet" href="/user/css/all.css">
-    <link rel="stylesheet" href="/user/css/lightslider.min.css">
+    <link rel="stylesheet" href="/user/css/all.css" />
+    <link rel="stylesheet" href="/user/css/lightslider.min.css" />
     <!-- flaticon CSS -->
-    <link rel="stylesheet" href="/user/css/flaticon.css">
-    <link rel="stylesheet" href="/user/css/themify-icons.css">
+    <link rel="stylesheet" href="/user/css/flaticon.css" />
+    <link rel="stylesheet" href="/user/css/themify-icons.css" />
     <!-- font awesome CSS -->
-    <link rel="stylesheet" href="/user/css/magnific-popup.css">
+    <link rel="stylesheet" href="/user/css/magnific-popup.css" />
     <!-- swiper CSS -->
-    <link rel="stylesheet" href="/user/css/slick.css">
-    <link rel="stylesheet" href="/user/css/price_rangs.css">
+    <link rel="stylesheet" href="/user/css/slick.css" />
+    <link rel="stylesheet" href="/user/css/price_rangs.css" />
     <!-- style CSS -->
-    <link rel="stylesheet" href="/user/css/style.css">
-</head>
+    <link rel="stylesheet" href="/user/css/style.css" />
+  </head>
 
-<body>
+  <body>
     <!--::header part start::-->
     <header class="main_menu home_menu">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-12">
-                    <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="#"> <img src="/user/img/logo.png" alt="logo"> </a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="menu_icon"><i class="fas fa-bars"></i></span>
-                        </button>
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-12">
+            <nav class="navbar navbar-expand-lg navbar-light">
+              <a class="navbar-brand" href="#"> <img src="/user/img/logo.png" alt="logo" /> </a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="menu_icon"><i class="fas fa-bars"></i></span>
+              </button>
 
-                        <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
-                            <ul class="navbar-nav">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Home</a>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Shop
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                                        <a class="dropdown-item" href="category.html"> shop category</a>
-                                        <a class="dropdown-item" href="single-product.html">product details</a>
+              <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a
+                      class="nav-link dropdown-toggle"
+                      href="blog.html"
+                      id="navbarDropdown_1"
+                      role="button"
+                      data-toggle="dropdown"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                    >
+                      Shop
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+                      <a class="dropdown-item" href="category.html"> shop category</a>
+                      <a class="dropdown-item" href="single-product.html">product details</a>
+                    </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a
+                      class="nav-link dropdown-toggle"
+                      href="blog.html"
+                      id="navbarDropdown_3"
+                      role="button"
+                      data-toggle="dropdown"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                    >
+                      pages
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                      <a class="dropdown-item" href="login.html"> login</a>
+                      <a class="dropdown-item" href="tracking.html">tracking</a>
+                      <a class="dropdown-item" href="checkout.html">product checkout</a>
+                      <a class="dropdown-item" href="cart.html">shopping cart</a>
+                      <a class="dropdown-item" href="confirmation.html">confirmation</a>
+                      <a class="dropdown-item" href="elements.html">elements</a>
+                    </div>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a
+                      class="nav-link dropdown-toggle"
+                      href="blog.html"
+                      id="navbarDropdown_2"
+                      role="button"
+                      data-toggle="dropdown"
+                      aria-haspopup="true"
+                      aria-expanded="false"
+                    >
+                      blog
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                      <a class="dropdown-item" href="blog.html"> blog</a>
+                      <a class="dropdown-item" href="single-blog.html">Single blog</a>
+                    </div>
+                  </li>
 
-                                    </div>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_3"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        pages
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="login.html"> login</a>
-                                        <a class="dropdown-item" href="tracking.html">tracking</a>
-                                        <a class="dropdown-item" href="checkout.html">product checkout</a>
-                                        <a class="dropdown-item" href="cart.html">shopping cart</a>
-                                        <a class="dropdown-item" href="confirmation.html">confirmation</a>
-                                        <a class="dropdown-item" href="elements.html">elements</a>
-                                    </div>
-                                </li>
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_2"
-                                        role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        blog
-                                    </a>
-                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                                        <a class="dropdown-item" href="blog.html"> blog</a>
-                                        <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                                    </div>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="hearer_icon d-flex">
-                            <!-- <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a> -->
-                            <a href=""><i class="ti-heart"></i></a>
-                            <div class="dropdown cart">
-                                <a class="dropdown-toggle" href="#" id="navbarDropdown3" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <i class="fas fa-cart-plus"></i>
-                                </a>
-                                <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="hearer_icon d-flex">
+                <!-- <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a> -->
+                <a href=""><i class="ti-heart"></i></a>
+                <div class="dropdown cart">
+                  <a
+                    class="dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown3"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    <i class="fas fa-cart-plus"></i>
+                  </a>
+                  <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <div class="single_product">
     
                                     </div>
                                 </div> -->
-                            </div>
-                            <a href="/login"><i class="ti-user"></i>&nbsp; Sign In</a>
-                        </div>
-                    </nav>
                 </div>
-            </div>
+
+                <a href="/signin"><i class="ti-user"></i>&nbsp; Sign In</a>
+
+              </div>
+            </nav>
+          </div>
         </div>
-        <!-- <div class="search_input" id="search_input_box">
+      </div>
+      <!-- <div class="search_input" id="search_input_box">
             <div class="container ">
                 <form class="d-flex justify-content-between search-inner">
                     <input type="text" class="form-control" id="search_input" placeholder="Search Here">
@@ -121,4 +155,5 @@
         </div> -->
     </header>
     <!-- Header part end-->
-
+  </body>
+</html>
