--- a/view/admin/partials/header.ejs
+++ b/view/admin/partials/header.ejs
@@ -49,7 +49,7 @@
               ></span>
               <a
                 class="inline-flex items-center w-full text-sm font-semibold text-gray-800 transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200 dark:text-gray-100"
-                href="index.html"
+                href="/admin/dashboard"
               >
                 <svg
                   class="w-5 h-5"
@@ -73,7 +73,7 @@
             <li class="relative px-6 py-3">
               <a
                 class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
-                href="forms.html"
+                href="/admin/orders"
               >
                 <svg
                   class="w-5 h-5"
@@ -95,7 +95,7 @@
             <li class="relative px-6 py-3">
               <a
                 class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
-                href="forms.html"
+                href="/admin/clients"
               >
                 <svg
                   class="w-5 h-5"
@@ -117,7 +117,7 @@
             <li class="relative px-6 py-3">
               <a
                 class="inline-flex items-center w-full text-sm font-semibold transition-colors duration-150 hover:text-gray-800 dark:hover:text-gray-200"
-                href="forms.html"
+                href="/admin/products"
               >
                 <svg
                   class="w-5 h-5"
