user details adding to database

--- a/view/user/signup.ejs
+++ b/view/user/signup.ejs
@@ -27,7 +27,7 @@
                         <div class="login_part_form_iner ml-5">
                             <h3>Join Zain Family ! <br>
                                 Please Sign Up now</h3>
-                            <form class="row contact_form" action="#" method="post" novalidate="novalidate">
+                            <form class="row contact_form" action="/signup" method="post">
                                 <div class="col-md-6 form-group p_star">
                                     <input type="text" class="form-control" id="fname" name="fname" value=""
                                         placeholder="First Name" required>
