user details find and check during login with mob

--- a/view/user/signup.ejs
+++ b/view/user/signup.ejs
@@ -7,8 +7,8 @@
                 <div class="col-lg-8">
                     <div class="breadcrumb_iner">
                         <div class="breadcrumb_iner_item">
-                            <h2>Log In</h2>
-                            <p>Home <span>-</span> Log In</p>
+                            <h2>Sign Up</h2>
+                            <p>Home <span>-</span> Sign Up</p>
                         </div>
                     </div>
                 </div>
