user and admin login bcrypted and compared

--- a/view/user/login.ejs
+++ b/view/user/login.ejs
@@ -38,8 +38,8 @@
                                 Please Sign in now</h3>
                             <form class="row contact_form" action="/signin" method="post">
                                 <div class="col-md-12 form-group p_star">
-                                    <input type="text" class="form-control" id="mob" name="mob" value=""
-                                        placeholder="Phone">
+                                    <input type="email" class="form-control" id="email" name="email" value=""
+                                        placeholder="email">
                                 </div>
                                 <div class="col-md-12 form-group p_star">
                                     <input type="password" class="form-control" id="password" name="password" value=""
