product adding to DB

--- a/view/admin/product_management.ejs
+++ b/view/admin/product_management.ejs
@@ -1380,6 +1380,14 @@
       </div>
       <!-- pillow Table end -->
 
+      <button
+      class="px-5 py-3 mt-8 mx-auto font-medium w-64 leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
+      >
+      <a href="/admin/products/add-product">
+      Add Product
+    </a>
+    </button>                     
+
       <!-- TABLE END  -->
     </div>
     <!-- 
