delete product and sweet alert

--- a/view/admin/partials/header.ejs
+++ b/view/admin/partials/header.ejs
@@ -24,6 +24,8 @@
     ></script>
     <script src="/admin/assets/js/charts-lines.js" defer></script>
     <script src="/admin/assets/js/charts-pie.js" defer></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   </head>
   <body>
     <div
