--- a/view/admin/product_management.ejs
+++ b/view/admin/product_management.ejs
@@ -88,7 +88,7 @@
                       </svg>
                     </button>
                     </a>
-                    <a href="/admin/products/delete-product/<%= products[i]._id %>">
+                    <a onclick="deleteWarning('<%= products[i]._id %>')">
                     <button
                       class="flex items-center justify-between px-2 py-2 text-sm font-medium leading-5 text-purple-600 rounded-lg dark:text-gray-400 focus:outline-none focus:shadow-outline-gray"
                       aria-label="Delete"
@@ -375,5 +375,44 @@
 
 </div> -->
   </main>
+
+  <script>
+function deleteWarning(id){    
+  const swalWithBootstrapButtons = Swal.mixin({
+  customClass: {
+    confirmButton: 'btn btn-success',
+    cancelButton: 'btn btn-danger'
+  },
+  buttonsStyling: true
+})
+
+swalWithBootstrapButtons.fire({
+  title: 'Are you sure?',
+  text: "You won't be able to revert this!",
+  icon: 'warning',
+  showCancelButton: true,
+  confirmButtonText: 'Yes, delete it!',
+  cancelButtonText: 'No, cancel!',
+  reverseButtons: true
+}).then((result) => {
+  if (result.isConfirmed) {
+    location.href=`/admin/products/delete-product/${id.toString()}`
+    swalWithBootstrapButtons.fire(
+      'Deleted!',
+      'Your file has been deleted.',
+      'success'
+    )
+  } else if (
+    /* Read more about handling dismissals below */
+    result.dismiss === Swal.DismissReason.cancel
+  ) {
+    swalWithBootstrapButtons.fire(
+      'Cancelled',
+      'Your imaginary file is safe :)',
+      'error'
+    )
+  }
+})}
+  </script>
 
 <%- include('partials/footer.ejs') %>
