logo style modified when viewed in mobile view

--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -2352,12 +2352,8 @@ ul {
   /* line 245, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_menu.scss */
   .navbar-brand img {
     max-width: 100px;
-    margin: 0 auto;
-    position: absolute;
-    left: 0;
-    right: 0;
-    display: inline-block;
-    top: 0;
+    margin-left:  16px;
+    margin-bottom: 2px;
   }
   /* line 255, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_menu.scss */
   .navbar-light .navbar-toggler {
@@ -2371,7 +2367,7 @@ ul {
   }
   /* line 267, ../../01 cl html template/03_jun 2019/188_Aranoz shop_html/sass/_menu.scss */
   .main_menu a i {
-    margin-left: 13px;
+    margin-left: 0px;
   }
 }
 
