--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -36,7 +36,6 @@
         <div class="row align-items-center">
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg navbar-light">
-              <a class="navbar-brand" href="#"> <img src="/user/img/logo.png" alt="logo" /> </a>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -48,13 +47,17 @@
               >
                 <span class="menu_icon"><i class="fas fa-bars"></i></span>
               </button>
+              <a class="navbar-brand" href="#"> <img src="/user/img/logo.png" alt="logo" /> </a>
 
               <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="/">Home</a>
                   </li>
-                  <li class="nav-item dropdown">
+                  <li class="nav-item">
+                    <a class="nav-link" href="/shop">Shop</a>
+                  </li>
+                  <!-- <li class="nav-item dropdown">
                     <a
                       class="nav-link dropdown-toggle"
                       href="blog.html"
@@ -91,7 +94,7 @@
                       <a class="dropdown-item" href="confirmation.html">confirmation</a>
                       <a class="dropdown-item" href="elements.html">elements</a>
                     </div>
-                  </li>
+                  </li> -->
                   <li class="nav-item dropdown">
                     <a
                       class="nav-link dropdown-toggle"
@@ -102,9 +105,13 @@
                       aria-haspopup="true"
                       aria-expanded="false"
                     >
-                      blog
+                      Category
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                      <a class="dropdown-item" href="blog.html"> blog</a>
+                      <a class="dropdown-item" href="single-blog.html">Single blog</a>
+                      <a class="dropdown-item" href="blog.html"> blog</a>
+                      <a class="dropdown-item" href="single-blog.html">Single blog</a>
                       <a class="dropdown-item" href="blog.html"> blog</a>
                       <a class="dropdown-item" href="single-blog.html">Single blog</a>
                     </div>
