--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -124,7 +124,7 @@
               </div>
               <div class="hearer_icon d-flex">
                 <!-- <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a> -->
-                <a href=""><i class="ti-heart"></i></a>
+                <a href="" class="di-none"><i class="ti-heart"></i></a>
                 <div class="dropdown cart">
                   <a
                     class="dropdown-toggle"
@@ -144,7 +144,7 @@
                                 </div> -->
                 </div>
 
-                <a href="/signin"><i class="ti-user"></i>&nbsp; Sign In</a>
+                <a href="/signin"><i class="ti-user"></i>&nbsp; <span class="di-none">Sign In</span> </a>
 
               </div>
             </nav>
