spell correcting : param to params

--- a/view/user/partials/header.ejs
+++ b/view/user/partials/header.ejs
@@ -98,7 +98,7 @@
                   <li class="nav-item dropdown">
                     <a
                       class="nav-link dropdown-toggle"
-                      href="blog.html"
+                      href="/shop"
                       id="navbarDropdown_2"
                       role="button"
                       data-toggle="dropdown"
@@ -108,23 +108,24 @@
                       Category
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                      <a class="dropdown-item" href="blog.html"> blog</a>
-                      <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                      <a class="dropdown-item" href="blog.html"> blog</a>
-                      <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                      <a class="dropdown-item" href="blog.html"> blog</a>
-                      <a class="dropdown-item" href="single-blog.html">Single blog</a>
+                      <a class="dropdown-item" href="/shop/furniture"> Furniture</a>
+                      <a class="dropdown-item" href="/shop/wall-accent">Wall Accent</a>
+                      <a class="dropdown-item" href="/shop/lighting">Lighting</a>
+                      <a class="dropdown-item" href="/shop/garden">Garden</a>
+                      <a class="dropdown-item" href="/shop/Storage">Storage</a>
+                      <a class="dropdown-item" href="/shop/beds">Beds & Mattress</a>
+                      <a class="dropdown-item" href="/shop/sofa">Sofa & Recliners</a>
                     </div>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                   </li>
                 </ul>
               </div>
               <div class="hearer_icon d-flex">
                 <!-- <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a> -->
-                <a href="" class="di-none"><i class="ti-heart"></i></a>
+                <a href="/" class="di-none"><i class="ti-heart"></i></a>
                 <div class="dropdown cart">
                   <a
                     class="dropdown-toggle"
