edit product added images

--- a/public/admin/assets/css/tailwind.output.css
+++ b/public/admin/assets/css/tailwind.output.css
@@ -2119,3 +2119,8 @@ print and (-ms-high-contrast:none) {
         grid-template-columns: repeat(4, minmax(0, 1fr))
     }
 }
+
+.edit-image-show{
+    display: inline;
+    
+}
