--- a/view/admin/product_management.ejs
+++ b/view/admin/product_management.ejs
@@ -43,7 +43,7 @@
                     >
                       <img
                         class="object-cover w-full h-full rounded-full"
-                        src="https://images.unsplash.com/flagged/photo-1570612861542-284f4c12e75f?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=200&fit=max&ixid=eyJhcHBfaWQiOjE3Nzg0fQ"
+                        src="/product_img/<%= products[i].images[0] %>"
                         alt=""
                         loading="lazy"
                       />
