--- a/view/admin/edit_product.ejs
+++ b/view/admin/edit_product.ejs
@@ -1,10 +1,11 @@
 <%- include('partials/header.ejs') %>
+
 <main class="h-full pb-16 overflow-y-auto">
   <div class="container px-6 mt-8 mx-auto grid">
     <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
       <!-- General elements -->
       <h4 class="mb-4 text-lg font-semibold text-gray-600 dark:text-gray-300">Edit Product</h4>
-      <form action="/admin/products/edit-product/<%= userId %>" method="post">
+      <form action="/admin/products/edit-product/<%= userId %>" method="post" enctype="multipart/form-data">
         <div class="px-4 py-3 mb-8 bg-white rounded-lg shadow-md dark:bg-gray-800">
           <label class="block text-sm">
             <span class="text-gray-700 dark:text-gray-400">Title</span>
@@ -42,6 +43,21 @@
             <option value="Beds & Mattress">Beds & Mattress</option>
             </select>
           </label>
+
+          <label class="block mt-4 text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Images</span>
+            <input
+              name="images"
+              type="file"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+            multiple/>
+          </label>
+
+          <% product.images.forEach(element => { %>
+
+              <img src="/product_img/<%= element %>" alt="" width="100px" class="edit-image-show">
+
+            <% }); %>
 
           <label class="block mt-4 text-sm">
             <span class="text-gray-700 dark:text-gray-400">Price</span>
