--- a/view/admin/edit_product.ejs
+++ b/view/admin/edit_product.ejs
@@ -12,8 +12,8 @@
             <input
               name="title" value="<%= product.title %>"
               type="text"
-              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-              
+              class="block w-full mt-1 text-sm dark:border-gray-600 
+              dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
             />
           </label>
 
