--- a/view/admin/partials/header.ejs
+++ b/view/admin/partials/header.ejs
@@ -24,7 +24,9 @@
     ></script>
     <script src="/admin/assets/js/charts-lines.js" defer></script>
     <script src="/admin/assets/js/charts-pie.js" defer></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
+        <!-- You need focus-trap.js to make the modal accessible -->
+        <script src="/admin/assets/js/focus-trap.js" defer></script>
 
   </head>
   <body>
