admin session added and side bar navigation

--- a/view/admin/login.ejs
+++ b/view/admin/login.ejs
@@ -32,7 +32,7 @@
           </div>
           <div class="flex items-center justify-center p-6 sm:p-12 md:w-1/2">
             <div class="w-full">
-              <form action="/admin/" method="post">
+              <form action="/admin" method="post">
                 <h1 class="mb-4 text-xl font-semibold text-gray-700 dark:text-gray-200">Login</h1>
                 <label class="block text-sm">
                   <span class="text-gray-700 dark:text-gray-400">Email</span>
