user otp verification

--- a/view/user/login.ejs
+++ b/view/user/login.ejs
@@ -46,13 +46,14 @@
                                         placeholder="Password">
                                 </div>
                                 <div class="col-md-12 form-group">
-                                    <div class="creat_account d-flex align-items-center">
+                                    <!-- <div class="creat_account d-flex align-items-center">
                                         <input type="checkbox" id="f-option" name="selector">
                                         <label for="f-option">Remember me</label>
-                                    </div>
+                                    </div> -->
                                     <button type="submit" value="submit" class="btn_3">
-                                        log in
+                                        Log In
                                     </button>
+                                    <a class="lost_pass" href="/signin/otp-phone">Login by SMS otp Verification</a>
                                     <a class="lost_pass" href="#">forget password?</a>
                                 </div>
                             </form>
